deluge/deluge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext: 
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8112
        - name: deluge
          #image: linuxserver/deluge:latest
          image: linuxserver/deluge:2.2.0
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /downloads
      volumes:
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: config
          persistentVolumeClaim:
            claimName: deluge-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: deluge-data-pvc
