deluge/deluge-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deluge
  namespace: default
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
  hostnames:
  - "deluge.home.williamlhunter.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: deluge
        port: 8112
